oxiplate-derive/tests/broken/stray-elseif.stderr
error: Unexpected 'elseif' statement
 --> tests/broken/stray-elseif.rs:4:24
  |
4 | #[oxiplate_inline("{%- elseif should_do -%}{{ action }}")]
  |                        ^^^^^^
